# simulation

./: .gitignore  LICENSE  Makefile  README.md
docker/: Dockerfile
src/robotaksi_control/: package.xml  setup.cfg  setup.py
src/robotaksi_control/launch/: control.launch.py
src/robotaksi_control/robotaksi_control/: can_bridge_stub.py  waypoint_controller.py
src/robotaksi_description/: CMakeLists.txt  package.xml
src/robotaksi_description/urdf/: bee1.urdf.xacro
src/robotaksi_localization/: package.xml  setup.cfg  setup.py
src/robotaksi_localization/robotaksi_localization/: odom_relay_node.py
src/robotaksi_perception/: package.xml  setup.cfg  setup.py
src/robotaksi_perception/robotaksi_perception/: inference_node.py
src/robotaksi_planning/: package.xml  setup.cfg  setup.py  test_engel_yayinci.py
src/robotaksi_planning/launch/: planning.launch.py  test_engel.launch.py
src/robotaksi_planning/robotaksi_planning/: engel_algilama_node.py  planner_node.py  track_graph.py
src/robotaksi_world/: CMakeLists.txt  package.xml
src/robotaksi_world/launch/: sim.launch.py
src/robotaksi_world/worlds/: pist.world  pistOG.txt  sdf_inspect.py
